2008-12-10  Juan Cespedes <cespedes@debian.org>

	* Release version 0.5.1

2008-12-10  Juan Cespedes <cespedes@debian.org>

	* Patches from Anderson Lizardo and Riku Voipio:
	  + Add generic support for arm targets
	  + Save funtion arguments on arm
	  + Add thumb instruction support
	  + Add basic arm/eabi support
	  + fix exec() testcase cleanup
	  + fix memory corruption in clone() test
	  + fix tracing child with "-p" option

2008-02-27  Luis Machado  <luisgpm@br.ibm.com>

	* sysdeps/linux-gnu/ppc/trace.c (arch_umovelong): New function.
	* sysdeps/linux-gnu/ppc/regs.c (get_instruction): New function.
	  (get_count_register): New function.
	* sysdeps/linux-gnu/ppc/arch.h (ARCH_HAVE_UMOVELONG): New define.
	* sysdeps/linux-gnu/trace.c (umovelong): Create arch-specific
	  variant.
	* ltrace.h (umovelong): Change prototype.
	* process_event.c (process_breakpoint): Handle specifics of ppc32 PLT.
	* display_args.c: Call umovelong with info parameter.

2007-09-04  Juan Cespedes  <cespedes@debian.org>

	* ltrace.h: Take arg_num out of arg_type_info
	* linux-gnu/*/trace.c: gimme_arg(): Add arg_num as argument
	* ltrace.c: check for existence of $HOME before using it
	* General: Small fixes (indentation)

2007-08-31  Juan Cespedes  <cespedes@debian.org>

	* General: Small fixes (indentation, typos, clean-up of code)
	* ltrace.c: Close output file on exit
	* ltrace.c: use getenv("HOME") instead of getpwuid(geteuid())->pw_dir
	* read_config_file.c, display_args.c: remove "ignore" argtype;
	  that's what "void" is for
	* packaging/debian/: misc fixes, sync with version 0.5-2
	* etc/ltrace.conf: added more system calls
	* testsuite/ltrace.minor/trace-clone.c: sleep(1) to avoid earlier
	  termination of process
	* sysdeps/linux-gnu/trace.c: trace_pid(): reverted Petr's patch
	  to wait for child to stop, as it stopped following clone()
	* process_event.c: Disable breakpoints before doing fork() (again!),
	  to make children work as expected
